Restructure apis and add ceph-users

--- a/e2e/kuttl/ceph/provider-ceph-1.26.yaml
+++ b/e2e/kuttl/ceph/provider-ceph-1.26.yaml
@@ -2,7 +2,7 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestSuite
 testDirs:
-- ./e2e/tests/ceph
+- ./e2e/tests/radosgw
 kindConfig: e2e/kind/kind-config-1.26.yaml
 startKIND: false
 timeout: 90
