--- a/e2e/localstack/localstack-provider-cfg.yaml
+++ b/e2e/localstack/localstack-provider-cfg.yaml
@@ -13,7 +13,7 @@ data:
   access_key: "RHVtbXk="
   secret_key: "RHVtbXk="
 ---
-apiVersion: ceph.crossplane.io/v1alpha1
+apiVersion: radosgw.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
   name: localstack-a
@@ -28,7 +28,7 @@ spec:
       key: credentials
   disableHealthCheck: true
 ---
-apiVersion: ceph.crossplane.io/v1alpha1
+apiVersion: radosgw.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
   name: localstack-b
@@ -43,7 +43,7 @@ spec:
       key: credentials
   disableHealthCheck: true
 ---
-apiVersion: ceph.crossplane.io/v1alpha1
+apiVersion: radosgw.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
   name: localstack-c
