--- a/examples/sample/bucket.yaml
+++ b/examples/sample/bucket.yaml
@@ -1,8 +1,8 @@
-apiVersion: provider-ceph.ceph.crossplane.io/v1alpha1
+apiVersion: s3.radosgw.crossplane.io/v1alpha1
 kind: Bucket
 metadata:
   name: test-bucket
 spec:
   providers:
-  - ceph-admin-cfg
+  - radosgw-admin-cfg
   forProvider: {}
