--- a/docs/debug/provider.yaml
+++ b/docs/debug/provider.yaml
@@ -3,6 +3,6 @@ kind: Provider
 metadata:
   name: linode-provider-ceph
 spec:
-  package: xpkg.upbound.io/linode/provider-ceph:v0.0.3
+  package: xpkg.upbound.io/linode/s3:v0.0.3
   controllerConfigRef:
     name: debug-config
