--- a/e2e/tests/ceph/provider-ceph/04-assert.yaml
+++ b/e2e/tests/ceph/provider-ceph/04-assert.yaml
@@ -1,10 +1,10 @@
-apiVersion: provider-ceph.ceph.crossplane.io/v1alpha1
+apiVersion: s3.radosgw.crossplane.io/v1alpha1
 kind: Bucket
 metadata:
   name: test-bucket
   finalizers:
   - "finalizer.managedresource.crossplane.io"
-  - "bucket-in-use.provider-ceph.crossplane.io"
+  - "bucket-in-use.s3.crossplane.io"
 status:
   atProvider:
     backendStatuses:
@@ -17,13 +17,13 @@ status:
     status: "True"
     type: Synced
 ---
-apiVersion: provider-ceph.ceph.crossplane.io/v1alpha1
+apiVersion: s3.radosgw.crossplane.io/v1alpha1
 kind: Bucket
 metadata:
   name: test-bucket-all
   finalizers:
   - "finalizer.managedresource.crossplane.io"
-  - "bucket-in-use.provider-ceph.crossplane.io"
+  - "bucket-in-use.s3.crossplane.io"
 status:
   atProvider:
     backendStatuses:
