--- a/e2e/tests/stable/provider-ceph/01-assert.yaml
+++ b/e2e/tests/stable/provider-ceph/01-assert.yaml
@@ -1,33 +1,33 @@
-apiVersion: provider-ceph.ceph.crossplane.io/v1alpha1
+apiVersion: s3.radosgw.crossplane.io/v1alpha1
 kind: Bucket
 metadata:
   name: localstack-a-health-check
 ---
-apiVersion: provider-ceph.ceph.crossplane.io/v1alpha1
+apiVersion: s3.radosgw.crossplane.io/v1alpha1
 kind: Bucket
 metadata:
   name: localstack-b-health-check
 ---
-apiVersion: provider-ceph.ceph.crossplane.io/v1alpha1
+apiVersion: s3.radosgw.crossplane.io/v1alpha1
 kind: Bucket
 metadata:
   name: localstack-c-health-check
 ---
-apiVersion: ceph.crossplane.io/v1alpha1
+apiVersion: radosgw.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
   name: localstack-a
 status:
   health: Healthy
 ---
-apiVersion: ceph.crossplane.io/v1alpha1
+apiVersion: radosgw.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
   name: localstack-b
 status:
   health: Healthy
 ---
-apiVersion: ceph.crossplane.io/v1alpha1
+apiVersion: radosgw.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
   name: localstack-c
