--- a/examples/provider/config.yaml
+++ b/examples/provider/config.yaml
@@ -13,7 +13,7 @@ data:
   access_key: "RHVtbXk="
   secret_key: "RHVtbXk="
 ---
-apiVersion: ceph.crossplane.io/v1alpha1
+apiVersion: radosgw.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
   name: ceph-admin-cfg
@@ -24,5 +24,5 @@ spec:
     source: Secret
     secretRef:
       namespace: crossplane-system
-      name: ceph-admin-cfg
+      name: radosgw-admin-cfg
       key: credentials
