--- a/examples/provider/provider.yaml
+++ b/examples/provider/provider.yaml
@@ -3,4 +3,4 @@ kind: Provider
 metadata:
   name: provider-ceph
 spec:
-  package: xpkg.upbound.io/linode/provider-ceph:v0.0.1
+  package: xpkg.upbound.io/linode/s3:v0.0.1
