--- a/package/crds/s3.ceph.crossplane.io_buckets.yaml
+++ b/package/crds/s3.ceph.crossplane.io_buckets.yaml
@@ -4,14 +4,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: buckets.provider-ceph.ceph.crossplane.io
+  name: buckets.s3.ceph.crossplane.io
 spec:
-  group: provider-ceph.ceph.crossplane.io
+  group: s3.ceph.crossplane.io
   names:
     categories:
     - crossplane
     - managed
-    - ceph
+    - radosgw
     kind: Bucket
     listKind: BucketList
     plural: buckets
@@ -67,9 +67,9 @@ spec:
               disabled:
                 description: Disabled allows the user to create a Bucket CR without
                   creating buckets on any S3 backends. If an existing bucket CR is
-                  updated with Disabled=true, then provider-ceph attempts to remove
-                  any existing buckets from the existing S3 backends and the Bucket
-                  CR's status is updated accordingly. This flag overrides 'Providers'.
+                  updated with Disabled=true, then s3 attempts to remove any existing
+                  buckets from the existing S3 backends and the Bucket CR's status
+                  is updated accordingly. This flag overrides 'Providers'.
                 type: boolean
               forProvider:
                 description: BucketParameters are the configurable fields of a Bucket.
