--- a/examples/sample/bucket.yaml
+++ b/examples/sample/bucket.yaml
@@ -1,4 +1,4 @@
-apiVersion: s3.radosgw.crossplane.io/v1alpha1
+apiVersion: s3.ceph.crossplane.io/v1alpha1
 kind: Bucket
 metadata:
   name: test-bucket
