--- a/package/crds/radosgw.ceph.crossplane.io_cephusers.yaml
+++ b/package/crds/radosgw.ceph.crossplane.io_cephusers.yaml
@@ -80,17 +80,22 @@ spec:
                   uid:
                     description: The uid of the user (human readable string)
                     type: string
-                  user_quota_max_objects:
+                  user_quota_max_buckets:
                     description: The max number of objects allowed for this user
                     type: integer
-                  user_quota_max_size:
-                    description: The maximum size of objects for this user
+                  user_quota_max_objects:
+                    description: The number of objects for this user
+                    format: int64
+                    type: integer
+                  user_quota_max_size_kb:
+                    description: The maximum storage size (total) in MB
                     type: integer
                 required:
                 - displayed_name
                 - uid
+                - user_quota_max_buckets
                 - user_quota_max_objects
-                - user_quota_max_size
+                - user_quota_max_size_kb
                 type: object
               managementPolicies:
                 default:
